Se creo los modelos y el DbContext

--- a/ContosoUniversity/Views/Home/Index.cshtml
+++ b/ContosoUniversity/Views/Home/Index.cshtml
@@ -2,7 +2,17 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="jumbotron">
+    <h1>Contoso University</h1>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <h2>Bienvenido Contoso University</h2>
+        <p>
+            Contoso University es una simple aplicación que
+            demuestra como usar Entity Framework Core en un 
+            ASP.NET Core MVC aplicación web.         
+        </p>
+    </div>
+    
 </div>
