tarea finalizada, elimine los controllers y view y volvi a realizar scaffolded para corregir los nombres en plural y modifique la view/Estudiante/Details.

--- a/ContosoUniversity/Views/Inscripcion/Delete.cshtml
+++ b/ContosoUniversity/Views/Inscripcion/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.Calificacion)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Course)
+            @Html.DisplayNameFor(model => model.Curso)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Course.CursoID)
+            @Html.DisplayFor(model => model.Curso.CursoID)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Estudiante)
