--- a/ContosoUniversity/Views/Inscripcion/Index.cshtml
+++ b/ContosoUniversity/Views/Inscripcion/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Calificacion)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Course)
+                @Html.DisplayNameFor(model => model.Curso)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Estudiante)
@@ -31,7 +31,7 @@
                 @Html.DisplayFor(modelItem => item.Calificacion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Course.CursoID)
+                @Html.DisplayFor(modelItem => item.Curso.CursoID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Estudiante.ID)
