--- a/ContosoUniversity/Views/Estudiante/Delete.cshtml
+++ b/ContosoUniversity/Views/Estudiante/Delete.cshtml
@@ -5,8 +5,8 @@
 }
 
 <h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<p class="text-danger">@ViewData["MensajeDeError"]</p>
+<h3>¿Estas seguro que deseas eliminar este estudiante?</h3>
 <div>
     <h4>Estudiante</h4>
     <hr />
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
