Se agregó ordenamiento al EstudianteController index action

--- a/ContosoUniversity/Views/Estudiante/Index.cshtml
+++ b/ContosoUniversity/Views/Estudiante/Index.cshtml
@@ -12,14 +12,16 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Apellido)
+            <th>             
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]">@Html.DisplayNameFor(model => model.Apellido)</a>
+
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Nombre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaInscripcion)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["DateSortParm"]">@Html.DisplayNameFor(model => model.FechaInscripcion)</a>
+
             </th>
             <th></th>
         </tr>
