Se modifico la pag Instructor

--- a/ContosoUniversity/Views/Shared/_Layout.cshtml
+++ b/ContosoUniversity/Views/Shared/_Layout.cshtml
@@ -31,10 +31,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Curso" asp-action="Index">Cursos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Instructors" asp-action="Index">Instructors</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Instructor" asp-action="Index">Instructores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Departments" asp-action="Index">Departments</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Departamento" asp-action="Index">Departamentos</a>
                         </li>                        
                     </ul>
                 </div>
