--- a/ContosoUniversity/Views/Instructor/Delete.cshtml
+++ b/ContosoUniversity/Views/Instructor/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContosoUniversity.Models.Curso
+﻿@model ContosoUniversity.Models.Instructor
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,31 +8,31 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Curso</h4>
+    <h4>Instructor</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Titulo)
+            @Html.DisplayNameFor(model => model.Apellido)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Titulo)
+            @Html.DisplayFor(model => model.Apellido)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Creditos)
+            @Html.DisplayNameFor(model => model.Nombre)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Creditos)
+            @Html.DisplayFor(model => model.Nombre)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Departamento)
+            @Html.DisplayNameFor(model => model.FechaContratacion)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Departamento.DepartamentoID)
-        </dd class>
+            @Html.DisplayFor(model => model.FechaContratacion)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="CursoID" />
+        <input type="hidden" asp-for="ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
