--- a/ContosoUniversity/Views/Curso/Create.cshtml
+++ b/ContosoUniversity/Views/Curso/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ContosoUniversity.Models.Curso
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear curso";
 }
 
-<h1>Create</h1>
+<h1>Crear curso</h1>
 
 <h4>Curso</h4>
 <hr />
@@ -26,6 +26,13 @@
                 <label asp-for="Creditos" class="control-label"></label>
                 <input asp-for="Creditos" class="form-control" />
                 <span asp-validation-for="Creditos" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Departamento" class="control-label"></label>
+                <select asp-for="DepartamentoID" class="form-control" asp-items="ViewBag.DepartamentoID">
+                    <option value="">-- Seleccionar departamento --</option>
+                </select>
+                <span asp-validation-for="DepartamentoID" class="text-danger" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
