--- a/ContosoUniversity/Views/Curso/Edit.cshtml
+++ b/ContosoUniversity/Views/Curso/Edit.cshtml
@@ -4,15 +4,20 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Curso</h4>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CursoID" />
+            <div class="form-group">
+                <label asp-for="CursoID" class="control-label"></label>
+                <div>@Html.DisplayFor(model => model.CursoID)</div>
+            </div>
             <div class="form-group">
                 <label asp-for="Titulo" class="control-label"></label>
                 <input asp-for="Titulo" class="form-control" />
@@ -22,6 +27,13 @@
                 <label asp-for="Creditos" class="control-label"></label>
                 <input asp-for="Creditos" class="form-control" />
                 <span asp-validation-for="Creditos" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Departamento" class="control-label"></label>
+                <select asp-for="DepartamentoID" class="form-control" asp-items="ViewBag.DepartamentoID">
+                    <option value="">-- Seleccionar departamento --</option>
+                </select>
+                <span asp-validation-for="DepartamentoID" class="text-danger" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
