--- a/ContosoUniversity/Views/Instructor/Edit.cshtml
+++ b/ContosoUniversity/Views/Instructor/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ContosoUniversity.Models.Instructor
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Instructor";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Instructor</h4>
 <hr />
@@ -29,7 +29,12 @@
                 <span asp-validation-for="FechaContratacion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="OficinaAsignada.Ubicacion" class="control-label"></label>
+                <input asp-for="OficinaAsignada.Ubicacion" class="form-control" />
+                <span asp-validation-for="OficinaAsignada.Ubicacion" class="text-danger" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
