--- a/ContosoUniversity/Views/Instructor/Edit.cshtml
+++ b/ContosoUniversity/Views/Instructor/Edit.cshtml
@@ -34,9 +34,36 @@
                 <span asp-validation-for="OficinaAsignada.Ubicacion" class="text-danger" />
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
-            </div>
-        </form>
+                <div class="col-md-offset-2 col-md-10">
+                    <table>
+                        <tr>
+                            @{
+                                int cnt = 0;
+                                List<ContosoUniversity.Models.Escuela_ViewModels.DatosCursosAsignados> cursos = ViewBag.Cursos;
+
+                                foreach (var curso in cursos)
+                                {
+                                    if (cnt++ % 3 == 0)
+                                    {
+                                    @:</tr><tr>
+                                    }
+                                    @:<td>
+                                        <input type="checkbox"
+                                               name="cursosSeleccionados"
+                                               value="@curso.CursoID"
+                                               @(Html.Raw(curso.Asignado ? "checked=\"checked\"" : "")) />
+                                        @curso.CursoID @:  @curso.Titulo
+                                    @:</td>
+                                }
+                            @:</tr>
+                            }
+                        </table>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Guardar" class="btn btn-primary" />
+                </div>
+            </form>
     </div>
 </div>
 
