--- a/ContosoUniversity/Views/Instructor/Create.cshtml
+++ b/ContosoUniversity/Views/Instructor/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ContosoUniversity.Models.Instructor
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear";
 }
 
-<h1>Create</h1>
+<h1>Crear</h1>
 
 <h4>Instructor</h4>
 <hr />
@@ -23,19 +23,53 @@
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FechaContratacion" class="control-label"></label>
+                <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="FechaContratacion" class="form-control" />
                 <span asp-validation-for="FechaContratacion" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="FechaContratacion" class="control-label"></label>
+                <input asp-for="OficinaAsignada.Ubicacion" class="form-control" />
+                <span asp-validation-for="OficinaAsignada.Ubicacion" class="text-danger" />
             </div>
-        </form>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <table>
+                        <tr>
+                            @{
+                                int cnt = 0;
+                                List<ContosoUniversity.Models.Escuela_ViewModels.DatosCursosAsignados> cursos = ViewBag.Cursos;
+
+                                foreach (var course in cursos)
+                                {
+                                    if (cnt++ % 3 == 0)
+                                    {
+                                    @:</tr><tr>
+                                    }
+                                    @:<td>
+                                        <input type="checkbox"
+                                               name="cursosSeleccionados"
+                                               value="@course.CursoID"
+                                               @(Html.Raw(course.Asignado ? "checked=\"checked\"" : "")) />
+                                        @course.CursoID @:  @course.Titulo
+                                    @:</td>
+                                }
+                            @:</tr>
+                            }
+                        </table>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver atras</a>
 </div>
 
 @section Scripts {
