--- a/ContosoUniversity/Views/Departamento/Edit.cshtml
+++ b/ContosoUniversity/Views/Departamento/Edit.cshtml
@@ -13,6 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="DepartamentoID" />
+            <input type="hidden" asp-for="RowVersion" />
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -30,7 +31,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="InstructorID" class="control-label"></label>
-                <select asp-for="InstructorID" class="form-control" asp-items="ViewBag.InstructorID"></select>
+                <select asp-for="InstructorID" class="form-control" asp-items="ViewBag.InstructorID">
+                    <option value="">-- Seleccione un Administrador --</option>
+                </select>
                 <span asp-validation-for="InstructorID" class="text-danger"></span>
             </div>
             <div class="form-group">
