--- a/ContosoUniversity/Views/Departamento/Details.cshtml
+++ b/ContosoUniversity/Views/Departamento/Details.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayNameFor(model => model.Administrador)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Administrador.Apellido)
+            @Html.DisplayFor(model => model.Administrador.NombreCompleto)
         </dd>
     </dl>
 </div>
